Fixing text wrapping

--- a/css/discover.css
+++ b/css/discover.css
@@ -178,18 +178,19 @@ a{
 }
 
 p.textPost {
-	word-break: break-all;
+	word-wrap: break-word;
 	display: table-cell;
 	vertical-align: middle;
 	text-align: center;
 	font-size: 1em;
     width: 300px !important;
+	max-width: 280px !important;
     height: 230px !important;
     max-height: 230px !important;
-    min-height: 230px !important;
+    min-height: 230px !i	mportant;
 }
 
 .box {
-	padding-left: 5px;
-	padding-right: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
